FullQa New/src/objects/Case_Key_Information_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Key Information Audits</relationshipLabel>
        <relationshipName>Case_Key_Information_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Value__c</fullName>
        <label>Previous Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Case Key Information Audit</label>
    <nameField>
        <displayFormat>ckai{0000}</displayFormat>
        <label>Case Key Information Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Key Information Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>